--- a/docs/site_libs/quarto-html/quarto-syntax-highlighting.css
+++ b/docs/site_libs/quarto-html/quarto-syntax-highlighting.css
@@ -1,34 +1,34 @@
 /* quarto syntax highlight colors */
 :root {
-  --quarto-hl-ot-color: #efef8f;
-  --quarto-hl-at-color: inherit;
-  --quarto-hl-ss-color: #cc9393;
-  --quarto-hl-an-color: #7f9f7f;
-  --quarto-hl-fu-color: #efef8f;
-  --quarto-hl-st-color: #cc9393;
-  --quarto-hl-cf-color: #f0dfaf;
-  --quarto-hl-op-color: #f0efd0;
-  --quarto-hl-er-color: #c3bf9f;
-  --quarto-hl-bn-color: #dca3a3;
-  --quarto-hl-al-color: #ffcfaf;
-  --quarto-hl-va-color: inherit;
+  --quarto-hl-ot-color: #003B4F;
+  --quarto-hl-at-color: #657422;
+  --quarto-hl-ss-color: #20794D;
+  --quarto-hl-an-color: #5E5E5E;
+  --quarto-hl-fu-color: #4758AB;
+  --quarto-hl-st-color: #20794D;
+  --quarto-hl-cf-color: #003B4F;
+  --quarto-hl-op-color: #5E5E5E;
+  --quarto-hl-er-color: #AD0000;
+  --quarto-hl-bn-color: #AD0000;
+  --quarto-hl-al-color: #AD0000;
+  --quarto-hl-va-color: #111111;
   --quarto-hl-bu-color: inherit;
   --quarto-hl-ex-color: inherit;
-  --quarto-hl-pp-color: #ffcfaf;
-  --quarto-hl-in-color: #7f9f7f;
-  --quarto-hl-vs-color: #cc9393;
-  --quarto-hl-wa-color: #7f9f7f;
-  --quarto-hl-do-color: #7f9f7f;
-  --quarto-hl-im-color: inherit;
-  --quarto-hl-ch-color: #dca3a3;
-  --quarto-hl-dt-color: #dfdfbf;
-  --quarto-hl-fl-color: #c0bed1;
-  --quarto-hl-co-color: #7f9f7f;
-  --quarto-hl-cv-color: #7f9f7f;
-  --quarto-hl-cn-color: #dca3a3;
-  --quarto-hl-sc-color: #dca3a3;
-  --quarto-hl-dv-color: #dcdccc;
-  --quarto-hl-kw-color: #f0dfaf;
+  --quarto-hl-pp-color: #AD0000;
+  --quarto-hl-in-color: #5E5E5E;
+  --quarto-hl-vs-color: #20794D;
+  --quarto-hl-wa-color: #5E5E5E;
+  --quarto-hl-do-color: #5E5E5E;
+  --quarto-hl-im-color: #00769E;
+  --quarto-hl-ch-color: #20794D;
+  --quarto-hl-dt-color: #AD0000;
+  --quarto-hl-fl-color: #AD0000;
+  --quarto-hl-co-color: #5E5E5E;
+  --quarto-hl-cv-color: #5E5E5E;
+  --quarto-hl-cn-color: #8f5902;
+  --quarto-hl-sc-color: #5E5E5E;
+  --quarto-hl-dv-color: #AD0000;
+  --quarto-hl-kw-color: #003B4F;
 }
 
 /* other quarto variables */
@@ -36,106 +36,132 @@
   --quarto-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+pre > code.sourceCode > span {
+  color: #003B4F;
+}
+
+code span {
+  color: #003B4F;
+}
+
+code.sourceCode > span {
+  color: #003B4F;
+}
+
+div.sourceCode,
+div.sourceCode pre.sourceCode {
+  color: #003B4F;
+}
+
 code span.ot {
-  color: #efef8f;
+  color: #003B4F;
+}
+
+code span.at {
+  color: #657422;
 }
 
 code span.ss {
-  color: #cc9393;
+  color: #20794D;
 }
 
 code span.an {
-  color: #7f9f7f;
-  font-weight: bold;
+  color: #5E5E5E;
 }
 
 code span.fu {
-  color: #efef8f;
+  color: #4758AB;
 }
 
 code span.st {
-  color: #cc9393;
+  color: #20794D;
 }
 
 code span.cf {
-  color: #f0dfaf;
+  color: #003B4F;
 }
 
 code span.op {
-  color: #f0efd0;
+  color: #5E5E5E;
 }
 
 code span.er {
-  color: #c3bf9f;
+  color: #AD0000;
 }
 
 code span.bn {
-  color: #dca3a3;
+  color: #AD0000;
 }
 
 code span.al {
-  color: #ffcfaf;
+  color: #AD0000;
+}
+
+code span.va {
+  color: #111111;
 }
 
 code span.pp {
-  color: #ffcfaf;
-  font-weight: bold;
+  color: #AD0000;
 }
 
 code span.in {
-  color: #7f9f7f;
-  font-weight: bold;
+  color: #5E5E5E;
 }
 
 code span.vs {
-  color: #cc9393;
+  color: #20794D;
 }
 
 code span.wa {
-  color: #7f9f7f;
-  font-weight: bold;
+  color: #5E5E5E;
+  font-style: italic;
 }
 
 code span.do {
-  color: #7f9f7f;
+  color: #5E5E5E;
+  font-style: italic;
+}
+
+code span.im {
+  color: #00769E;
 }
 
 code span.ch {
-  color: #dca3a3;
+  color: #20794D;
 }
 
 code span.dt {
-  color: #dfdfbf;
+  color: #AD0000;
 }
 
 code span.fl {
-  color: #c0bed1;
+  color: #AD0000;
 }
 
 code span.co {
-  color: #7f9f7f;
+  color: #5E5E5E;
 }
 
 code span.cv {
-  color: #7f9f7f;
-  font-weight: bold;
+  color: #5E5E5E;
+  font-style: italic;
 }
 
 code span.cn {
-  color: #dca3a3;
-  font-weight: bold;
+  color: #8f5902;
 }
 
 code span.sc {
-  color: #dca3a3;
+  color: #5E5E5E;
 }
 
 code span.dv {
-  color: #dcdccc;
+  color: #AD0000;
 }
 
 code span.kw {
-  color: #f0dfaf;
+  color: #003B4F;
 }
 
 .prevent-inlining {
